# Word-Float

./: LICENSE  README.md  app.py  dummy.json  pyproject.toml  requirements.txt
app/: __init__.py  cache.py  config.py  limiter.py  main.py  schemas.py
app/routers/: news.py
app/services/: __init__.py  cleaner.py  rss.py  tokenizer.py
static/: script.js  style.css
templates/: index.html
