[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "word-float"
version = "2.2.3"
description = "Visualize word frequencies from Google News RSS with a Matter.js physics UI."
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "feedparser>=6.0",
    "sudachipy>=0.6.8",
    "sudachidict_core>=20240109",
    "cachetools>=5.3",
    "slowapi>=0.1.9",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "jinja2>=3.1",
]

[tool.setuptools]
packages = ["app", "app.services", "app.routers"]
